<resources>
    <string name="app_name">CameraX</string>
    <string name="your_camera_view_is_partially_blocked_ensure_the_lens_is_clear_for_better_visibility">Your camera view is partially blocked. Ensure the lens is clear for better visibility.</string>
    <string name="take_photo">Take photo</string>
    <string name="start_capture">Start capture</string>
    <string name="camara">Camara</string>
    <string name="video">Video</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="photo_capture_failed">Photo capture failed: %1$s</string>
    <string name="photo_capture_succeeded">Photo capture succeeded: %1$s</string>
    <string name="average_luminosity">Average luminosity: %1$s</string>
    <string name="use_case_binding_failed">Use case binding failed</string>
    <string name="stop_capture">Stop capture</string>
</resources>